add scripts and rendering objects style

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/_style.css">
     <link rel="stylesheet" href="css/body.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/form.css">
+    <link rel="stylesheet" href="css/list.css">
     
     <script defer src="js/script.js"></script>
     <title>Lista zadań</title>
@@ -27,14 +28,14 @@
     <main class="main">
         <h2 class="main__subtitle">Dodaj nowe zadanie </h2>
         <div class="main__div">
-        <form >
+        <form class="js-form">
             <fieldset class="form__fieldset">
-                <p><input class="form__input" placeholder="Co jest do zrobienia?"><button class="form__button js-addNewTaskButton">Dodaj zadanie</button>
+                <p><input class="form__input js-newTask" placeholder="Co jest do zrobienia?"><button class="form__button js-addNewTaskButton">Dodaj zadanie</button>
             </fieldset></form></div>
             </p>
             <h2 class="main__subtitle main__subtitle--padding">Lista zadań</h2>
             <div class="main__div main__div--minHeight">
-                <ul class="js-newTask">
+                <ul class="list js-tasks">
                 </ul>
             </div>
         
