add mediaqueries and margins

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="css/list.css">
+    <link rel="stylesheet" href="css/header.css">
 
     <script defer src="js/script.js"></script>
     <title>Lista zadań</title>
 </head>
 
 <body class="body">
-    <header>
+    <header class="header">
         <h1>Lista zadań </h1>
     </header>
     <main class="main">
