--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="css/list.css">
     <link rel="stylesheet" href="css/header.css">
-
+    <link rel="stylesheet" href="css/footer.css">
     <script defer src="js/script.js"></script>
     <title>Lista zadań</title>
 </head>
