add rendered buttons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 
             </form>
         </div>
-        <h2 class="main__subtitle">Lista zadań</h2>
+        <h2 class="main__subtitle main__subtitle--grid js-subtitle"></h2>
         <div class="main__div main__div--minHeight">
             <ul class="list js-tasks">
             </ul>
